unpackaged/main/default/objects/Opportunity/fields/Accepts_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Credit_Cards__c</fullName>
    <formula>Account.Accepts_Credit_Cards__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays whether the firm is accepting credit cards based on the account field &quot;Accepts Credit Cards&quot;</inlineHelpText>
    <label>Accepts Credit Cards</label>
    <type>Checkbox</type>
</CustomField>