unpackaged/main/default/objects/Opportunity/fields/Account_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Account.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>