unpackaged/main/default/objects/Opportunity/fields/Account_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Account_Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MC; R176952; Edited: auto</description>
    <label>Account Metrics</label>
    <referenceTo>Metrics__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>