unpackaged/main/default/objects/Opportunity/fields/Account_s_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_s_Last_Activity_Date__c</fullName>
    <formula>Account.LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Activity Date from the related Account</inlineHelpText>
    <label>Account&#39;s Last Activity Date</label>
    <type>Date</type>
</CustomField>