unpackaged/main/default/objects/Opportunity/fields/Active_ARR__c.field-meta.xml
<CustomField>
    <fullName>Active_ARR__c</fullName>
    <description>Active ARR for the customer based on the Active MRR field which is summarized from the Zuora active subscription</description>
    <formula>Active_MRR__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zz ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>