unpackaged/main/default/objects/Opportunity/fields/Active_MRR__c.field-meta.xml
<CustomField>
    <fullName>Active_MRR__c</fullName>
    <description>Active MRR for the customer&#39;s closed won opportunity based on the accounts active subscription</description>
    <label>Active MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>