unpackaged/main/default/objects/Opportunity/fields/Activity_Update__c.field-meta.xml
<CustomField>
    <fullName>Activity_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked to trigger flow to capture first sales activity against opportunity</description>
    <label>Activity Update</label>
    <type>Checkbox</type>
</CustomField>