unpackaged/main/default/objects/Opportunity/fields/Add_to_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Marketo__c</fullName>
    <formula>IF(ISPICKVAL(Account.Type, &quot;Lead&quot;) &amp;&amp; (ISPICKVAL( StageName, &quot;Needs Marketing Help&quot;)), true, false)</formula>
    <label>Add to Marketo</label>
    <type>Checkbox</type>
</CustomField>