unpackaged/main/default/objects/Opportunity/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>Additional comments for approval process</description>
    <inlineHelpText>Additional comments for approval process</inlineHelpText>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>