unpackaged/main/default/objects/Opportunity/fields/Additional_Loss_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Loss_Details__c</fullName>
    <description>For additional loss details input</description>
    <label>Lost Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>