unpackaged/main/default/objects/Opportunity/fields/Additional_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used when there is an additional Sales Engineer assisting with Opportunity</description>
    <label>Additional Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>