unpackaged/main/default/objects/Opportunity/fields/Admin_Portal__c.field-meta.xml
<CustomField>
    <fullName>Admin_Portal__c</fullName>
    <formula>IF(
AND(Product_Environment__r.RecordType.DeveloperName = &#39;MyCase&#39;,
NOT(ISBLANK(Product_Environment__r.Subdomain__c))),
HYPERLINK(&quot;https://&quot;&amp; Product_Environment__r.Subdomain__c &amp; &quot;.mycase.com/admin/firm&quot;, &quot;MyCase Admin Portal Link&quot;),

IF(
AND(Product_Environment__r.RecordType.DeveloperName = &#39;LawPay_Pro&#39;,
NOT(ISBLANK(Product_Environment__r.Subdomain__c))),
HYPERLINK(&quot;https://&quot;&amp; Product_Environment__r.Subdomain__c &amp; &quot;.mycase.com/admin/firm&quot;, &quot;LawPay Pro Admin Portal Link&quot;),

&quot;N/A&quot;

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Portal</label>
    <type>Text</type>
</CustomField>