unpackaged/main/default/objects/Opportunity/fields/All_Promo_Count__c.field-meta.xml
<CustomField>
    <fullName>All_Promo_Count__c</fullName>
    <description>Counts uber of promoSKU added to Oppty. Used to trigger flows when promo&#39;s are added or removed</description>
    <label>All Promo Count</label>
    <summaryForeignKey>Opportunity_Promo__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>