unpackaged/main/default/objects/Opportunity/fields/All_SKU_Count__c.field-meta.xml
<CustomField>
    <fullName>All_SKU_Count__c</fullName>
    <description>Count of Products added to the Opportunity</description>
    <label>All SKU Count</label>
    <summaryForeignKey>Opportunity_SKU__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>