unpackaged/main/default/objects/Opportunity/fields/AmEx__c.field-meta.xml
<CustomField>
    <fullName>AmEx__c</fullName>
    <label>AmEx %</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CC_Rate_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.05</fullName>
            </value>
            <value>
                <fullName>0.10</fullName>
            </value>
            <value>
                <fullName>0.15</fullName>
            </value>
            <value>
                <fullName>0.20</fullName>
            </value>
            <value>
                <fullName>0.25</fullName>
            </value>
            <value>
                <fullName>0.30</fullName>
            </value>
            <value>
                <fullName>0.35</fullName>
            </value>
            <value>
                <fullName>0.40</fullName>
            </value>
            <value>
                <fullName>0.45</fullName>
            </value>
            <value>
                <fullName>0.50</fullName>
            </value>
            <value>
                <fullName>0.55</fullName>
            </value>
            <value>
                <fullName>0.60</fullName>
            </value>
            <value>
                <fullName>0.65</fullName>
            </value>
            <value>
                <fullName>0.70</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>0.80</fullName>
            </value>
            <value>
                <fullName>0.85</fullName>
            </value>
            <value>
                <fullName>0.90</fullName>
            </value>
            <value>
                <fullName>0.95</fullName>
            </value>
            <value>
                <fullName>1.00</fullName>
            </value>
            <value>
                <fullName>1.05</fullName>
            </value>
            <value>
                <fullName>1.10</fullName>
            </value>
            <value>
                <fullName>1.15</fullName>
            </value>
            <value>
                <fullName>1.20</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
            <value>
                <fullName>1.30</fullName>
            </value>
            <value>
                <fullName>1.35</fullName>
            </value>
            <value>
                <fullName>1.40</fullName>
            </value>
            <value>
                <fullName>1.45</fullName>
            </value>
            <value>
                <fullName>1.50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>