unpackaged/main/default/objects/Opportunity/fields/Annual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Discount__c</fullName>
    <label>Annual Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>