unpackaged/main/default/objects/Opportunity/fields/Annual_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total__c</fullName>
    <label>Annual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>