unpackaged/main/default/objects/Opportunity/fields/Application_Provisioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Provisioned_Date__c</fullName>
    <description>Date merchant application linked to Opportunity is provisioned</description>
    <formula>IF(
OR(
ISBLANK(Merchant_Application__c),
ISBLANK(Merchant_Application__r.Provisioned_Date__c)
), NULL,
DATEVALUE(Merchant_Application__r.Provisioned_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date merchant application linked to Opportunity is provisioned</inlineHelpText>
    <label>Application Provisioned Date</label>
    <type>Date</type>
</CustomField>