unpackaged/main/default/objects/Opportunity/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>IF(
OR(
ISBLANK(Merchant_Application__c),
ISBLANK(Merchant_Application__r.Application_Status__c)
), NULL,
Merchant_Application__r.Application_Status__c)</formula>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>