unpackaged/main/default/objects/Opportunity/fields/ARPU__c.field-meta.xml
<CustomField>
    <fullName>ARPU__c</fullName>
    <description>The average revenue per user (ARPU) is the average ARR generated by each primary software user.</description>
    <formula>Amount/12/Opportunity_SKU_License_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MRR ÷ Users</inlineHelpText>
    <label>ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>