unpackaged/main/default/objects/Opportunity/fields/Audit_Incorrect_MC_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Incorrect_MC_Close_Date__c</fullName>
    <formula>RecordType.Name = &quot;MyCase&quot; &amp;&amp;
NOT(ISBLANK(Product_Environment__c)) &amp;&amp;
NOT(ISBLANK(Product_Environment__r.First_Purchase_Date__c)) &amp;&amp;
CloseDate &lt;&gt; Product_Environment__r.First_Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit - Incorrect MC Close Date</label>
    <type>Checkbox</type>
</CustomField>