unpackaged/main/default/objects/Opportunity/fields/Azure_Total__c.field-meta.xml
<CustomField>
    <fullName>Azure_Total__c</fullName>
    <label>Azure Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>