unpackaged/main/default/objects/Opportunity/fields/BDR_Demo_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>BDR_Demo_Scheduled_Date__c</fullName>
    <inlineHelpText>Date that has been confirmed for the Prospect to meet with an AE.</inlineHelpText>
    <label>Demo Scheduled Date</label>
    <type>Date</type>
</CustomField>