unpackaged/main/default/objects/Opportunity/fields/BDR_Qualified_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>BDR_Qualified_Meeting_Date__c</fullName>
    <description>#4786</description>
    <inlineHelpText>Date when BDR confirms qualified opportunity.</inlineHelpText>
    <label>Qualified Meeting Date</label>
    <type>Date</type>
</CustomField>