unpackaged/main/default/objects/Opportunity/fields/Bill_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>Bill_Cycle_Day__c</fullName>
    <formula>IF( ISBLANK(Zuora_Bill_Date__c), DAY(CloseDate),

DAY(Zuora_Bill_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Cycle Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>