unpackaged/main/default/objects/Opportunity/fields/Billing_Processed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE after sales complete billing automation process</description>
    <label>Billing Processed</label>
    <type>Checkbox</type>
</CustomField>