unpackaged/main/default/objects/Opportunity/fields/Billing_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing subscription from billing system that triggered the opportunity to moved to Approvals or Closed Won</description>
    <label>Billing Subscription</label>
    <referenceTo>Billing_Subscription__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>