unpackaged/main/default/objects/Opportunity/fields/Buy_No_Buy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Buy_No_Buy_Reason__c</fullName>
    <description>MC; R165465; R1915436; Edited: users</description>
    <label>Win/Loss Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Drip / Dead Number</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Contact Left Organization</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Feature Gaps</fullName>
            </value>
            <value>
                <fullName>Market Fit</fullName>
            </value>
            <value>
                <fullName>MC Integration</fullName>
            </value>
            <value>
                <fullName>Migration Issue</fullName>
            </value>
            <value>
                <fullName>Missing Integrations</fullName>
            </value>
            <value>
                <fullName>MyCase Sales Team Owned</fullName>
            </value>
            <value>
                <fullName>Needs Feature</fullName>
            </value>
            <value>
                <fullName>Never Got Back To Me</fullName>
            </value>
            <value>
                <fullName>Never Spoke</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>No Need</fullName>
            </value>
            <value>
                <fullName>Non ICP</fullName>
            </value>
            <value>
                <fullName>No Reason Provided</fullName>
            </value>
            <value>
                <fullName>Not Enough Immediate Need</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Technical Reason</fullName>
            </value>
            <value>
                <fullName>Parked</fullName>
            </value>
            <value>
                <fullName>Poor Qualification</fullName>
            </value>
            <value>
                <fullName>Pre MS Word 2013</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>