unpackaged/main/default/objects/Opportunity/fields/Buy_No_Buy_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Buy_No_Buy_Reason_Notes__c</fullName>
    <description>MC; R165465; R1917402; Edited: users</description>
    <label>Win/Loss Reason Explanation</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>