unpackaged/main/default/objects/Opportunity/fields/Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes__c</fullName>
    <description>MC; R165465, R1916754; Edited: users</description>
    <label>Call Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>