unpackaged/main/default/objects/Opportunity/fields/Call_Notes_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes_Date_Time__c</fullName>
    <description>MC; R165465; Edited: users</description>
    <label>Call Notes Date/Time</label>
    <type>DateTime</type>
</CustomField>