unpackaged/main/default/objects/Opportunity/fields/Canadian_Application__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when opportunity is related to a Canadian merchant app that is provisioned</description>
    <label>Manually Close Won Payments Opportunity</label>
    <type>Checkbox</type>
</CustomField>