unpackaged/main/default/objects/Opportunity/fields/CASEpeer_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>CASEpeer_Customer_Status__c</fullName>
    <description>Customer Status on Account when Opportunity was created</description>
    <inlineHelpText>Customer Status on Account when Opportunity was created</inlineHelpText>
    <label>CASEpeer Customer Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>