unpackaged/main/default/objects/Opportunity/fields/CASEPeer_ID__c.field-meta.xml
<CustomField>
    <fullName>CASEPeer_ID__c</fullName>
    <externalId>true</externalId>
    <label>CASEPeer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>