unpackaged/main/default/objects/Opportunity/fields/CC_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Rate_Type__c</fullName>
    <label>CC Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
            <value>
                <fullName>Custom Rates</fullName>
                <isActive>false</isActive>
                <label>Custom Rates</label>
            </value>
            <value>
                <fullName>Pass-Through Rates</fullName>
                <isActive>false</isActive>
                <label>Pass-Through Rates</label>
            </value>
            <value>
                <fullName>Standard Rates</fullName>
                <isActive>false</isActive>
                <label>Standard Rates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>