unpackaged/main/default/objects/Opportunity/fields/Churned_MRR__c.field-meta.xml
<CustomField>
    <fullName>Churned_MRR__c</fullName>
    <description>Churned MyCase MRR from fully churned customers over the 6-month sales selling window</description>
    <inlineHelpText>Churned MyCase MRR from fully churned customers over the 6-month sales selling window</inlineHelpText>
    <label>Churned MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>