unpackaged/main/default/objects/Opportunity/fields/Closed_Day__c.field-meta.xml
<CustomField>
    <fullName>Closed_Day__c</fullName>
    <formula>DAY(CloseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>