unpackaged/main/default/objects/Opportunity/fields/Closed_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Closed_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a closed deal email has been internal sent. Should be controlled only thought process and admins</description>
    <label>Closed Notification Sent</label>
    <type>Checkbox</type>
</CustomField>