unpackaged/main/default/objects/Opportunity/fields/Closed_Won_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Criteria_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field is controlled by Flow, which evaluates whether the closed won critiera has been met per brand/record type. If so, the checkbox evaluates to TRUE. This field is used in the Opp - Closed Won Criteria validation rule and as a qualifier in the Initiate Onboarding Flow.</inlineHelpText>
    <label>Closed Won Criteria Met?</label>
    <type>Checkbox</type>
</CustomField>