unpackaged/main/default/objects/Opportunity/fields/Closed_Won_Criteria_Met_formula__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Criteria_Met_formula__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evalutes Closed Won Criteria per RT/Brand. When all Closed Won fields per RT/Brand are completed, the checkbox evaluates to True. This checkbox is used in automation to ensure Closed Won fields are created prior to Initiating Onbording</inlineHelpText>
    <label>Closed Won Criteria Met formula</label>
    <type>Checkbox</type>
</CustomField>