unpackaged/main/default/objects/Opportunity/fields/Cntcts_Last_Act_Date_Before_Opty_Create__c.field-meta.xml
<CustomField>
    <fullName>Cntcts_Last_Act_Date_Before_Opty_Create__c</fullName>
    <description>Contacts Last Activity Date Before Opportunity Creation - is populated by contact field &quot;Last Activity by Sales&quot;</description>
    <label>Cntcts Last Act Date Before Opty Create</label>
    <type>DateTime</type>
</CustomField>