unpackaged/main/default/objects/Opportunity/fields/Coaching_Notes__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Notes__c</fullName>
    <description>PM, IM; Edited: users</description>
    <inlineHelpText>Sales Leadership Team notes</inlineHelpText>
    <label>Coaching Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>