unpackaged/main/default/objects/Opportunity/fields/Commissioned_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_ARPU__c</fullName>
    <description>The average revenue per user (ARPU) is the average ARR generated by each primary software user. Specifically, this field uses the definition of ARR that is used for sales commissions, which differs from the company definition of ARR.</description>
    <formula>Commissioned_ARR__c/12/Opportunity_SKU_License_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commissioned ARR ÷ 12 ÷ Users</inlineHelpText>
    <label>Commissioned ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>