unpackaged/main/default/objects/Opportunity/fields/Commissioned_ARR__c.field-meta.xml
<CustomField>
    <fullName>Commissioned_ARR__c</fullName>
    <description>This is used to calculate commissions. It includes sales discounts normalized to an annual value and excludes company promotions.</description>
    <inlineHelpText>Used to calculate commissions; includes sales discounts normalized to an annual value and excludes company promotions.</inlineHelpText>
    <label>Commissioned ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>