unpackaged/main/default/objects/Opportunity/fields/Commit_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Stage_Date__c</fullName>
    <description>Date opportunity movies into Verbal Approvals (aka Commit)</description>
    <label>Commit Stage Date</label>
    <type>Date</type>
</CustomField>