unpackaged/main/default/objects/Opportunity/fields/Contract_Processing_Sucessful__c.field-meta.xml
<CustomField>
    <fullName>Contract_Processing_Sucessful__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the closed-won contract processing has completed sucessfully</inlineHelpText>
    <label>Contract Processing Sucessful</label>
    <type>Checkbox</type>
</CustomField>