unpackaged/main/default/objects/Opportunity/fields/Contract_Reprocess__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reprocess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This action will reprocess contracts without modifying the opportunity</description>
    <inlineHelpText>Only run if the opp is closed but there are no existing contracts associated to the opp.</inlineHelpText>
    <label>Contract Reprocess</label>
    <type>Checkbox</type>
</CustomField>