unpackaged/main/default/objects/Opportunity/fields/Contracting_Status__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Status__c</fullName>
    <label>Contracting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>