unpackaged/main/default/objects/Opportunity/fields/Conversion_Month__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Month__c</fullName>
    <formula>CASE(StageName,

&quot;Verbal Approvals&quot;, 

IF( Commit_Stage_Date__c &lt; DATE(YEAR(TODAY()), MONTH(TODAY()),1),

CloseDate, Commit_Stage_Date__c),

CloseDate

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Month</label>
    <type>Date</type>
</CustomField>