unpackaged/main/default/objects/Opportunity/fields/Conversion_Required__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Required__c</fullName>
    <description>Used for Soluno</description>
    <label>Conversion Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>