unpackaged/main/default/objects/Opportunity/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <formula>IF(

IF( MONTH(CloseDate) = 12,
DATE( YEAR(CloseDate), 12, 31),
DATE( YEAR(CloseDate), MONTH(CloseDate) + 1, 1) - 1) &gt;=

IF( MONTH(TODAY()) = 12,
DATE( YEAR(TODAY()), 12, 31),
DATE( YEAR(TODAY()), MONTH(TODAY()) + 1, 1) - 1),

IF( ISBLANK( Commit_Stage_Date__c ), DAY(CloseDate), 

IF( MONTH(Commit_Stage_Date__c) != MONTH(TODAY()), 1, DAY(Commit_Stage_Date__c))),

IF( ISBLANK( Commit_Stage_Date__c ), DAY(CloseDate), DAY(Commit_Stage_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>