unpackaged/main/default/objects/Opportunity/fields/Converting_From__c.field-meta.xml
<CustomField>
    <fullName>Converting_From__c</fullName>
    <inlineHelpText>Identify the software that the firm moved from when selecting Soluno,</inlineHelpText>
    <label>Converting From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Software_List</valueSetName>
    </valueSet>
</CustomField>