unpackaged/main/default/objects/Opportunity/fields/Converting_From_Other__c.field-meta.xml
<CustomField>
    <fullName>Converting_From_Other__c</fullName>
    <inlineHelpText>If selecting &quot;Other&quot; from the Converting From picklist, provide the name of the unlisted software.</inlineHelpText>
    <label>Converting From (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>