unpackaged/main/default/objects/Opportunity/fields/CP_Legacy_Solution__c.field-meta.xml
<CustomField>
    <fullName>CP_Legacy_Solution__c</fullName>
    <label>CP Legacy Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Legacy_Solution</valueSetName>
    </valueSet>
</CustomField>