unpackaged/main/default/objects/Opportunity/fields/CP_Sandbox_Account__c.field-meta.xml
<CustomField>
    <fullName>CP_Sandbox_Account__c</fullName>
    <label>CP Sandbox Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Credentials Sent</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>