unpackaged/main/default/objects/Opportunity/fields/Create_Onboarding_Record__c.field-meta.xml
<CustomField>
    <fullName>Create_Onboarding_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overrides the 3 or more requirement for creating onboarding record when Opportunity moves to Closed Won</description>
    <inlineHelpText>Creates Onboarding record when opportunity is for less than 3 users</inlineHelpText>
    <label>Create Onboarding Record</label>
    <type>Checkbox</type>
</CustomField>